--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 server.port=9090
+
 spring.jpa.database = postgresql
 spring.jpa.hibernate.ddl-auto = update
 
 spring.datasource.driver-class-name = org.postgresql.Driver
-
 spring.datasource.url= jdbc:postgresql://localhost/ventas
-
 spring.datasource.username= postgres
-
 spring.datasource.password= 1234
+
+debug = true
+#Niveles: Trace, Debug, Info, Warn, Error, Fatal, Off
+Logging.Level.root = TRACE
+
+Logging.file.path = D:/Universidad/8 Semestre/Arquitectura Orientada a Servicios/SpringBoot_React/ventas/backend/ventas/Logs
+Logging.file.name = D:/Universidad/8 Semestre/Arquitectura Orientada a Servicios/SpringBoot_React/ventas/backend/ventas/Logs/ventas.log
